# fortunes-python

./: Makefile  README.md  setup.cfg
data/: python-philosophy  python-quotes
