[metadata]
name = fortunes-python
description = Python philosophy and quotes fortunes
long_description = file: README.md
long_description_content_type = text/markdown
version = 2021.8.8
license = Public Domain
author = Hubert Tournier
author_email = nobody@nowhere.invalid
url = https://github.com/HubTou/fortunes-python/
project_urls =
    Bug Tracker = https://github.com/HubTou/fortunes-python/issues
keywords = pnu-project, python, fortune
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: Public Domain
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Fortune Cookies

[options]
package_dir =
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src

[options.data_files]
share/games/fortune = 
    data/python-philosophy
    data/python-philosophy.dat
    data/python-quotes
    data/python-quotes.dat

